--- a/css/_bottom.scss
+++ b/css/_bottom.scss
@@ -1,16 +1,15 @@
 .bottom {
-    background-color: #212121;
+    background-color: $dark-blue;
     padding: 2.5rem;
     border-radius: 0.5rem;
     margin-top: 1rem;
-    width: 100%;
-    color: white;
+    color: $white;
     text-align: center;
     position: relative;
 
     &__meter {
         margin: 1rem 0 3rem 0;
-        background-color: #0f0f0f;
+        background-color: $very-dark-blue;
         height: 1rem;
         border-radius: 99rem;
 
@@ -24,11 +23,14 @@
 
         &-length {
             grid-area: a;
+
             position: absolute;
-            left: 0;
+            left: 0.15rem;
+            transform: translateY(0.1rem);
+
             right: calc(100% - 70%);
-            background-color: #3d0c02;
-            height: 1rem;
+            background: $gradient;
+            height: 0.8rem;
             border-radius: 99rem;
 
             &::after {
@@ -40,26 +42,27 @@
 
                 padding: 0.35rem;
                 border-radius: 50%;
-                background-color: white;
+                background-color: $white;
             }
         }
         .start {
             grid-area: b;
             justify-self: flex-start;
+            font-weight: bold;
         }
 
         .end {
             grid-area: c;
             justify-self: flex-end;
+            font-weight: bold;
         }
 
     }
     &__left {
-        background-color: white;
+        background-color: $white;
         border-radius: 0.5rem;
-        color: #100c08;
+        color: $very-dark-blue;
         padding: 1rem;
-        box-shadow: 1px 1px 3px 3px #3d3d3d;
 
         position: absolute;
         left: 50%;
@@ -76,7 +79,40 @@
         }
 
         span:last-child {
-            color: #3d3d3d;
+            color: $grayish-blue;
+            font-weight: bold;
+        }
+    }
+}
+
+@media (min-width: 375px) {
+    .bottom {
+        text-align: initial;
+
+        &__meter {
+            margin: 1rem 0;
+        }
+
+        &__left {
+            border-radius: 0.5rem 0.5rem 0 0.5rem;
+            padding: 0.5rem;
+
+            left: 66%;
+            bottom: 80%;
+            transform: none;
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 100%;
+                right: 0;
+
+                height: 0;
+                width: 0;
+
+                border-left: 1rem solid transparent;
+                border-top: 1.6rem solid $white;
+            }
         }
     }
 }
