--- a/css/_global.scss
+++ b/css/_global.scss
@@ -13,14 +13,40 @@ body {
     font-size: 0.875rem;
     font-family: 'Raleway', sans-serif;
 
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    place-content: center;
-}
-
-.container {
     max-width: 1440px;
     width: 80%;
+    height: 100vh;
     margin: 0 auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: no-repeat url(../images/bg-mobile.png) $very-dark-blue;
+}
+
+@media (min-width: 375px) {
+
+    body {
+        background: no-repeat url(../images/bg-desktop.png) $very-dark-blue;
+        background-position: bottom;
+    }
+
+    main {
+        display: grid;
+        grid-template-areas: "a b b";
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+
+        margin-top: -12rem; // hack
+    }
+
+    .bottom {
+        grid-area: b;
+        align-self: flex-end;
+    }
+
+    .top {
+        grid-area: a;
+    }
 }
