--- a/css/_top.scss
+++ b/css/_top.scss
@@ -1,11 +1,10 @@
 .top {
-    background-color: #212121 ;
-    padding: 2.5rem 0 2rem 1.5rem;
+    background-color:  $dark-blue;
+    padding: 3rem 7rem 3rem 3rem;
     border-radius: 0.5rem 5rem 0.5rem 0.5rem;
-    width: 100%;
 
     &__logo {
-        padding-bottom: 1rem;
+        padding-bottom: 2rem;
     }
 
     &__drive-icons {
@@ -13,7 +12,7 @@
         column-gap: 1rem;
 
         img {
-            background-color: #0f0f0f ;
+            background-color: $very-dark-blue;
             padding: 0.5rem;
             border-radius: 0.5rem;
         }
