--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,8 @@
-$gradient: hsl(6, 100%, 80%) to hsl(335, 100%, 65%);
+$gradient: linear-gradient(to left, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
+
 $pale-blue: hsl(243, 100%, 93%);
 $grayish-blue: hsl(229, 7%, 55%);
 $dark-blue: hsl(228, 56%, 26%);
 $very-dark-blue: hsl(229, 57%, 11%);
+
+$white: hsl(0, 100%, 100%);
