--- a/css/index.css
+++ b/css/index.css
@@ -10,43 +10,56 @@ html {
 body {
   font-size: 0.875rem;
   font-family: 'Raleway', sans-serif;
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  place-content: center; }
-
-.container {
   max-width: 1440px;
   width: 80%;
-  margin: 0 auto; }
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: no-repeat url(../images/bg-mobile.png) #0c122c; }
+
+@media (min-width: 375px) {
+  body {
+    background: no-repeat url(../images/bg-desktop.png) #0c122c;
+    background-position: bottom; }
+  main {
+    display: grid;
+    grid-template-areas: "a b b";
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+    margin-top: -12rem; }
+  .bottom {
+    grid-area: b;
+    align-self: flex-end; }
+  .top {
+    grid-area: a; } }
 
 .top {
-  background-color: #212121;
-  padding: 2.5rem 0 2rem 1.5rem;
-  border-radius: 0.5rem 5rem 0.5rem 0.5rem;
-  width: 100%; }
+  background-color: #1d2c67;
+  padding: 3rem 7rem 3rem 3rem;
+  border-radius: 0.5rem 5rem 0.5rem 0.5rem; }
   .top__logo {
-    padding-bottom: 1rem; }
+    padding-bottom: 2rem; }
   .top__drive-icons {
     display: flex;
     column-gap: 1rem; }
     .top__drive-icons img {
-      background-color: #0f0f0f;
+      background-color: #0c122c;
       padding: 0.5rem;
       border-radius: 0.5rem; }
 
 .bottom {
-  background-color: #212121;
+  background-color: #1d2c67;
   padding: 2.5rem;
   border-radius: 0.5rem;
   margin-top: 1rem;
-  width: 100%;
   color: white;
   text-align: center;
   position: relative; }
   .bottom__meter {
     margin: 1rem 0 3rem 0;
-    background-color: #0f0f0f;
+    background-color: #0c122c;
     height: 1rem;
     border-radius: 99rem;
     position: relative;
@@ -58,10 +71,11 @@ body {
     .bottom__meter-length {
       grid-area: a;
       position: absolute;
-      left: 0;
+      left: 0.15rem;
+      transform: translateY(0.1rem);
       right: calc(100% - 70%);
-      background-color: #3d0c02;
-      height: 1rem;
+      background: linear-gradient(to left, #ffa399, #ff4d97);
+      height: 0.8rem;
       border-radius: 99rem; }
       .bottom__meter-length::after {
         content: "";
@@ -74,16 +88,17 @@ body {
         background-color: white; }
     .bottom__meter .start {
       grid-area: b;
-      justify-self: flex-start; }
+      justify-self: flex-start;
+      font-weight: bold; }
     .bottom__meter .end {
       grid-area: c;
-      justify-self: flex-end; }
+      justify-self: flex-end;
+      font-weight: bold; }
   .bottom__left {
     background-color: white;
     border-radius: 0.5rem;
-    color: #100c08;
+    color: #0c122c;
     padding: 1rem;
-    box-shadow: 1px 1px 3px 3px #3d3d3d;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
@@ -95,4 +110,26 @@ body {
       font-size: 2.2rem;
       font-weight: bold; }
     .bottom__left span:last-child {
-      color: #3d3d3d; }
+      color: #848794;
+      font-weight: bold; }
+
+@media (min-width: 375px) {
+  .bottom {
+    text-align: initial; }
+    .bottom__meter {
+      margin: 1rem 0; }
+    .bottom__left {
+      border-radius: 0.5rem 0.5rem 0 0.5rem;
+      padding: 0.5rem;
+      left: 66%;
+      bottom: 80%;
+      transform: none; }
+      .bottom__left::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        right: 0;
+        height: 0;
+        width: 0;
+        border-left: 1rem solid transparent;
+        border-top: 1.6rem solid white; } }
